# filipeom.github.io

./: 404.html  CNAME  README.md  _config.yml  blogger.opam  dune-project  feed.xml  index.html  robots.txt  sitemap.xml
.github/workflows/: deploy.yml
_bibliography/: papers.bib
_data/: coauthors.yml  cv.yml  repositories.yml  venues.yml
_layouts/: about.html
_news/: annoucement_4.md  announcement_1.md  announcement_2.md  announcement_3.md  announcement_4.md
_pages/: about.md  publications.md  repositories.md
_posts/: 2022-04-13-sew.md  2023-10-01-static-analysis-lab.md  2023-10-02-static-analysis-lab.md  2023-10-06-static-analysis-lab.md  2023-11-16-rust101.md
_sass/: _base.scss
assets/css/: bootstrap.min.css  jekyll-pygments-themes-github.css  jekyll-pygments-themes-native.css  main.css  main.css.map  style.css
assets/jupyter/: blog.ipynb.html
blog/: index.html  index.md
blog/2022/: index.html
blog/2023/: index.html
blog/posts/: 2023-10-02_static-analysis-lab.md  2023-11-16_rust101.md
cv/: index.html
includes/: header.html
news/: index.html
news/annoucement_4/: index.html
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
news/announcement_4/: index.html
old_posts/2015-05-15-images/: index.html
pages/: projects.md  publications.md
posts/: 2023-10-02-static-analysis-lab.md  2023-11-16-rust101.md
publications/: index.html
repositories/: index.html
src/: blog.ml  config.ml  datetime.ml  dune  jingoo_build.ml  meta.ml  page.ml  path.ml
templates/: document.html
(+21 files in other folders)
